--- a/src/App.css
+++ b/src/App.css
@@ -98,14 +98,20 @@
 .db-container {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  height: 100%;
+  flex: 1;
 }
 
 .search-container {
   display: flex;
   flex-direction: column;
   width: 250px;
+  padding: 16px;
+  box-sizing: border-box;
+  align-items: stretch;
+}
+
+.results-container {
+  flex: 1;
   padding: 16px;
 }
 
@@ -130,12 +136,18 @@ label {
   margin-bottom: 4px;
 }
 
+label.title {
+  font-weight: bold;
+  font-size: 12px;
+}
+
 label.primary {
   font-weight: bold;
   color: #1DA57A;
 }
 
-.list .ant-checkbox-group-item {
+.list .ant-checkbox-group-item,
+.list .ant-radio-wrapper {
   display: block !important;
   margin-bottom: 4px;
 }
