--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
 
 /* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
 ::-webkit-scrollbar-thumb {
-  /* This is the EXACT color of Mac OS scrollbars. 
+  /* This is the EXACT color of Mac OS scrollbars 
      Yes, I pulled out digital color meter */
   background: rgba(0,0,0,0.25);
   -webkit-border-radius: 100px;
@@ -68,7 +68,7 @@
 }
 
 .ant-select-selection--multiple .ant-select-selection__choice {
-  border-radius: 14px;
+  border-radius: 3px;
   border: none;
   transition: all 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
   background-color: #1DA57A;
@@ -183,7 +183,7 @@ label.primary {
 
 .grid {
   display: grid;
-  flex: 1;
+  min-height: min-content;
   grid-template-columns: repeat(auto-fill, minmax(175px, 1fr));
   grid-gap: 16px;
   box-sizing: border-box;
@@ -284,4 +284,168 @@ textarea {
 .long-modal .ant-modal-body {
   max-height: 70vh !important;
   overflow-y: auto !important;
+}
+
+.home-container {
+  box-sizing: border-box;
+  width: 100vw;
+  height: 100vh;
+  background-color: #ebebeb;
+  display: grid;
+  grid-template-areas:
+    "header header"
+    "welcome search"
+    "footer footer";
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 64px 1fr 72px;
+  grid-gap: 16px;
+}
+
+.home-container .header {
+  grid-area: header;
+  align-items: flex-end;
+  justify-content: space-between;
+}
+
+.home-container .welcome {
+  grid-area: welcome;
+}
+
+.home-container .search {
+  grid-area: search;
+}
+
+.home-container .footer {
+  grid-area: footer;
+  display: flex;
+  align-items: center;
+  padding: 0 16px;
+}
+
+.flex {
+  display: flex;
+}
+
+.flex.row {
+  flex-direction: row;
+}
+
+.flex.col {
+  flex-direction: column;
+}
+
+.navigation {
+  list-style: none;
+}
+
+.navigation li {
+  display: inline-block;
+  margin-right: 4px;
+}
+
+.navigation li > a {
+  display: block;
+  color: #232B2E;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.navigation li > a .link-wrap {
+  display: block;
+  padding: 6px 16px;
+  border-radius: 25px;
+  transition: all 0.3s;
+}
+
+.navigation li > a:hover .link-wrap,
+.navigation li > a.active .link-wrap {
+  background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+}
+
+.welcome {
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.welcome h1 {
+  color: #1DA57A;
+  text-align: right;
+  font-size: 36px;
+  line-height: 40px;
+}
+
+.search {
+  justify-content: center;
+  padding: 0 64px;
+}
+
+.species_name {
+  font-style: italic;
+}
+
+.article {
+  width: 80%;
+  height: min-content;
+}
+
+.article .ant-card-body {
+  padding: 0 !important;
+}
+
+.article-header {
+  position: relative;
+  width: 100%;
+  height: 350px;
+  background-size: cover;
+}
+
+.article-header::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-image: radial-gradient(ellipse closest-side, rgba(15, 14, 22, 0.75), #100e17);
+}
+
+.article-header .content {
+  position: absolute;
+  z-index: 20;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.article-header .content * {
+  color: #fefefe;
+}
+
+.article-sub-data {
+  height: auto;
+  background-image: linear-gradient(90deg, #1DA57A 0%, #66a6ff 100%);
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 8px;
+  padding: 16px 10%;
+  color: #ffffff;
+}
+
+.article-sub-data label {
+  font-weight: bold;
+  text-shadow: 1px 1px 2px rgba(0,0,0,0.3);
+}
+
+.term {
+  background-image: linear-gradient(90deg, #1DA57A 0%, #66a6ff 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
